--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -266,6 +266,16 @@ CHECK_FILES = \
 	'$(top_srcdir)/PerlMagick/t/input_p6.ppm'
 
 
+CHECK_SIZED_FILES = \
+	"xc:white" \
+	"xc:black" \
+	"xc:\#bfbfbf" \
+	"xc:\#7FFF7FFF7FFF" \
+	"xc:\#800080008000" \
+	"xc:\#800180018001" \
+	"xc:transparent"
+
+
 @HasFPX_TRUE@FPX = FPX
 @HasFPX_FALSE@FPX = 
 
@@ -698,9 +708,63 @@ check-rwfile:
 	for format in $(CHECK_FILE_FORMATS) ; \
 	do \
 	  format_failed=0 ; \
-	  for file in $(CHECK_FILES) ; \
+	  for file in  $(CHECK_FILES) ; \
 	  do \
 	    if env MAGICK_MODULE_PATH=`pwd`/../coders/.libs ./rwfile $$file $$format ; \
+	    then \
+	      : ; \
+	    else \
+	      status=1 ; \
+	      format_failed=1 ; \
+	    fi \
+	  done ; \
+	  if test $$format_failed -gt 0 ; \
+	  then \
+	    failed="$$failed$$format " ; \
+	  fi ; \
+	done ; \
+	if test -n "$$failed" ; \
+	then \
+	  echo "Failed rwfile for formats: $$failed" ; \
+	fi ; \
+	exit $$status
+
+check-rwblob-sized:
+	-@status=0 ; \
+	format='' ; \
+	for format in $(CHECK_BLOB_FORMATS) ; \
+	do \
+	  format_failed=0 ; \
+	  for file in $(CHECK_SIZED_FILES) ; \
+	  do \
+	    if env MAGICK_MODULE_PATH=`pwd`/../coders/.libs ./rwblob -size 320x200 $$file $$format ; \
+	    then \
+	      : ; \
+	    else \
+	      status=1 ; \
+	      format_failed=1 ; \
+	    fi \
+	  done ; \
+	  if test $$format_failed -gt 0 ; \
+	  then \
+	    failed="$$failed$$format " ; \
+	  fi ; \
+	done ; \
+	if test -n "$$failed" ; \
+	then \
+	  echo "Failed rwblob for formats: $$failed" ; \
+	fi ; \
+	exit $$status
+
+check-rwfile-sized:
+	-@status=0 ; \
+	format='' ; \
+	for format in $(CHECK_FILE_FORMATS) ; \
+	do \
+	  format_failed=0 ; \
+	  for file in $(CHECK_SIZED_FILES) ; \
+	  do \
+	    if env MAGICK_MODULE_PATH=`pwd`/../coders/.libs ./rwfile -size 320x200 $$file $$format ; \
 	    then \
 	      : ; \
 	    else \
@@ -724,7 +788,7 @@ check-drawtest:
 	./drawtest drawtest_out.mvg
 	./drawtest drawtest_out.svg
 
-check: check-drawtest check-rwfile check-rwblob
+check: check-drawtest check-rwfile check-rwfile-sized check-rwblob check-rwblob-sized
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
