--- a/Magick++/lib/Magick++/Makefile.in
+++ b/Magick++/lib/Magick++/Makefile.in
@@ -213,23 +213,26 @@ xml2_config = @xml2_config@
 #
 # Makefile to install Magick++ headers
 #
-# Copyright Bob Friesenhahn, 1999, 2000, 2001
+# Copyright Bob Friesenhahn, 1999, 2000, 2001, 2002
 #
 AUTOMAKE_OPTIONS = 1.6
 
 pkginclude_HEADERS = Blob.h CoderInfo.h Color.h Drawable.h \
-	Exception.h Functions.h Geometry.h Image.h \
-	Include.h Montage.h Options.h \
-	Pixels.h STL.h Thread.h TypeMetric.h
+	Exception.h Geometry.h Image.h Include.h Montage.h \
+	Pixels.h STL.h TypeMetric.h
 
+
+# Headers which are not installed but which are distributed
+noinst_HEADERS = BlobRef.h Functions.h ImageRef.h Options.h Thread.h
 subdir = Magick++/lib/Magick++
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/magick/magick_config.h
 CONFIG_CLEAN_FILES =
 DIST_SOURCES =
-HEADERS = $(pkginclude_HEADERS)
+HEADERS = $(noinst_HEADERS) $(pkginclude_HEADERS)
 
-DIST_COMMON = $(pkginclude_HEADERS) Makefile.am Makefile.in
+DIST_COMMON = $(noinst_HEADERS) $(pkginclude_HEADERS) Makefile.am \
+	Makefile.in
 all: all-am
 
 .SUFFIXES:
