--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -16,7 +16,7 @@
 
 #  Makefile for building ImageMagick coder modules
 #
-# Copyright (C) 2001 ImageMagick Studio, a non-profit organization dedicated
+# Copyright (C) 2002 ImageMagick Studio, a non-profit organization dedicated
 # to making software imaging solutions freely available.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
@@ -279,7 +279,7 @@ LIBMAGICK = ../magick/libMagick.la
 # Architecture-dependent data files installed with modules
 @WITH_MODULES_TRUE@pkg_DATA = modules.mgk
 
-# Architecture independent data files installed in the package's data directory
+# Architecture independent data files installed into ImageMagick/share
 @WITH_MODULES_TRUE@pkgdata_DATA = 
 
 # Modules which are to be built
