--- a/VisualMagick/magick/magick_config.h.in
+++ b/VisualMagick/magick/magick_config.h.in
@@ -13,7 +13,7 @@
 
 // Define to build an ImageMagick which uses registry settings to
 // locate installed components.
-#define UseInstalledImageMagick
+// #define UseInstalledImageMagick
 
 // Define to use the autotrace library (obtain sources seperately)
 //#define HasAUTOTRACE
